tweak sample config

--- a/sample-testnetfaucet.conf
+++ b/sample-testnetfaucet.conf
@@ -1,17 +1,13 @@
-; overridetoken bypasses the rate limiter.  required.
+; overridetoken bypasses the rate limiter.  Required.
 ;overridetoken=developers!developers!developers!
 
-; address to request coin returns. defaults to
-; TsWjioPrP8E1TuTMmTrVMM2BA4iPrjQXBpR which is
-; faucet.decred.org's address
-;walletaddress=T...
-
-; wallet rpc connection stuff.  need to set this.
+; wallet rpc connection stuff.  Required.
 ;wallethost=127.0.0.1
 ;walletuser=user
 ;walletpassword=pass
-;walletcert=/home/user/.dcrwallet/rpc.cert
 
-; default limits are below
+; These values are set by default to the sane values below.
+;walletaddress=TsWjioPrP8E1TuTMmTrVMM2BA4iPrjQXBpR
+;walletcert=~/.dcrwallet/rpc.cert
 ;withdrawalamount=2
 ;withdrawaltimelimit=30
