serve static files

--- a/sample-testnetfaucet.conf
+++ b/sample-testnetfaucet.conf
@@ -1,13 +1,19 @@
 ; overridetoken bypasses the rate limiter.  Required.
 ;overridetoken=developers!developers!developers!
 
-; wallet rpc connection stuff.  Required.
+; Wallet rpc connection stuff.  Required.
 ;wallethost=127.0.0.1
 ;walletuser=user
 ;walletpassword=pass
 
-; These values are set by default to the sane values below.
-;walletaddress=TsfDLrRkk9ciUuwfp2b8PawwnukYD7yAjGd
+; wallet rpc cert. Optional.
 ;walletcert=~/.dcrwallet/rpc.cert
+
+; Address displayed on the webpage for returning coins. Optional.
+;walletaddress=TsfDLrRkk9ciUuwfp2b8PawwnukYD7yAjGd
+
+; Maximum amount of dcr to send in each request. Optional.
 ;withdrawalamount=2
+
+; Number of seconds users need to wait before making another request. Optional.
 ;withdrawaltimelimit=30
